--- a/HijackPrefs/Makefile
+++ b/HijackPrefs/Makefile
@@ -2,11 +2,11 @@ include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = HijackPrefs
 
-HijackPrefs_FILES = HiPRootListController.m 
+HijackPrefs_FILES = HiPRootListController.m
 HijackPrefs_LIBRARIES = applist
 HijackPrefs_FRAMEWORKS = UIKit
 HijackPrefs_PRIVATE_FRAMEWORKS = Preferences
 HijackPrefs_INSTALL_PATH = /Library/PreferenceBundles
-HijackPrefs_CFLAGS = -fobjc-arc -Wno-deprecated-declarations
+HijackPrefs_CFLAGS = -fobjc-arc -Wno-deprecated-declarations # needed for AppList
 
 include $(THEOS_MAKE_PATH)/bundle.mk
